add issue2 art 7

--- a/blog/issue2/2017-02-27.md
+++ b/blog/issue2/2017-02-27.md
@@ -61,7 +61,7 @@ Femi Abiodun
 
 Sanubar Baghirova
 
-[Read Online](/articles/issue2/baleti-za-decu-u-srpskom-narodnom-pozorištu) [Download](https://drive.google.com/file/d/0B-3gNmXhRJqfcWhQaFpSZk1yVXM/view?usp=drive_link&resourcekey=0-1tAIjRTUAeOLi9WvlMlQvA)
+[Read Online](/articles/issue2/poetry-and-music-of-medieval-azerbaijani-ashygs) [Download](https://drive.google.com/file/d/0B-3gNmXhRJqfcWhQaFpSZk1yVXM/view?usp=drive_link&resourcekey=0-1tAIjRTUAeOLi9WvlMlQvA)
 
 #### Russian Ballet Dancers and Choreographers at the Belgrade Stage in the 20th and Early 21st Centuries [In Russian]
 
