--- a/issue2/article06/2017-02-20.mdx
+++ b/issue2/article06/2017-02-20.mdx
@@ -14,6 +14,7 @@ tags:
   ]
 ---
 
+
 # Music Preference And The Issues Of Social Challenges Among Nigerian Youth: Implications For Moral Development
 
 {/* truncate */}
@@ -508,6 +509,7 @@ Listening to a piece of music establishes a mood, creates emotions, brings about
 
 A guided listening is a vital tool in the process of rightful thinking skills, stable emotion and more importantly in building a nation and solving Nigeria’s multifarious social, political and economic problems.
 
+
 ---
 
 ## References
@@ -520,9 +522,9 @@ A guided listening is a vital tool in the process of rightful thinking skills, s
 4. Council on Communications and Media. 2009. "Policy Statement --Impact of Music. Music Lyrics, and Music Videos on Children and Youth." _The American Academy of Paediatrics_. Also available at:_ Pediatrics 2009, 124: 1448-1494_. doi:10.1542/peds.2009-2145. [pediatrics](https://pediatrics.aappublications.org/content/124/5/1488.full.html)
 5. Davies, Stephen. 2004. “Musical Works and Performances: A philosophical Exploration.” Clarendon Press.
 6. Donald, Robert and Peter Christenson. 1997. "It’s not only Rock and Roll." New York: Hampton Press of Cresskill.
-7. Harper, Patricia Thandi Hicks. 2013. “Understanding youth popular culture (ypc) and the Hip-Hop influence”. [proquest]https://www.proquest.com/scholarly-journals/understanding-youth-popular-culture-hip-hop/docview/229596746/se-2
-8. Herskovits, M.J. 1938. _Acculturation, the Study of Culture Contact_. New York: J.J. Augustin Publisher.
-9. Idowu, A. 1986. "Managing students’ behaviour problems."_ Oro Journal of Educational Studies I(I): 54-67_. Ilorin: Day-Star Publisher
+7. Harper, Patricia Thandi Hicks. 2013. “Understanding youth popular culture (ypc) and the Hip-Hop influence”. [proquest](https://www.proquest.com/scholarly-journals/understanding-youth-popular-culture-hip-hop/docview/229596746/se-2)
+8. Herskovits, M.J. 1938. _Acculturation, the Study of Culture Contact_. New York: J. J. Augustin Publisher.
+9. Idowu, A. 1986. "Managing students’ behaviour problems." _Oro Journal of Educational Studies I(I): 54-67_. Ilorin: Day-Star Publisher
 10. Juul, Mulder. 2008. "Use it or lose it: Music preference and uses related to psycho-social functioning among adolescents and young adults." [dspace](https://dspace.library.uu.nl/handle/1874/31137)
 11. Kathlean, Gasperini. 2011. "Youth culture study reveals significant changes in market trends."
 12. Keith, Roe. 1999. "Music and identity among European youth." _Soundscapes. Journal on Media Culture_.
